# project2_konanov_sergey_m25-555

./: .gitignore  Makefile  README.md  pyproject.toml
src/: db_meta.json  decorators.py
src/primitive_db/: core.py  engine.py  main.py  parser.py  utils.py
